--- a/app/views/rooms_all/index.html.erb
+++ b/app/views/rooms_all/index.html.erb
@@ -1,1 +1,5 @@
-<h1>ルービックキューブ</h1>
+<div class="outline">
+  <%= render "part/side_all" %>
+  <%= render "part/chat_all" %>
+  <%= render "part/icon_all" %>
+</div>
