--- a/app/assets/stylesheets/rooms_all.scss
+++ b/app/assets/stylesheets/rooms_all.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the rooms_all controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.icon {
+  list-style: none;
+  text-decoration-line: none;
+  color: white;
+}
