画像選択ボタンと動画選択ボタン

--- a/app/views/part/_chat_all.html.erb
+++ b/app/views/part/_chat_all.html.erb
@@ -5,19 +5,19 @@
     </div>
     <div class='chat-foot'>
       <div class='form-all'>
-        <%# <label class='message-all-label'>
-          <span class='image-file'> %>
-          <%#= image_tag('image.png', size: '30x30' ) %>
-          <%# </span>
+      <input class='message-all-form'>
+        <label class='message-all-label'>
+          <span class='image-file'>
+          <%= image_tag('image.png', size: '30x30' ) %>
+          </span>
           <input type='file' class='hidden'>
         </label>
-        <label class='message-all-label'> %>
-          <%# <span class='movie-file'> %>
-           <%#= image_tag('movie.png', size: '30x30' ) %>
-           <%# </span> %>
-          <%# <input type= 'file' class='hidden'>
-        </label> %>
-        <input class='message-all-form'>
+        <label class='message-all-label'>
+          <span class='movie-file'>
+           <%= image_tag('movie.png', size: '30x30' ) %>
+          </span>
+          <input type= 'file' class='hidden'>
+        </label>
       </div>
       <input class='message-all-send' type='image' src="https://user-images.githubusercontent.com/70368456/95151627-17d9c980-07c6-11eb-8b18-c9f28a0db6d9.png" width='30' height='30'>
     </div>
