--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,21 +1,34 @@
-<div class='side-outline'>
-  <div class='side-head'>
-    <div class='title-logo'>
-      <span class='a1'>R</span><span class='a2'>u</span><span class='a3'>b</span><span class='a4'>i</span><span class='a5'>'</span><span class='a6'>s</span> <span class='a1'>C</span><span class='a2'>h</span><span class='a3'>a</span><span class='a4'>t</span>
+<div class="outline">
+  <div class='study-outline'>
+    <div class='title-outline'>
+      <div class='title-logo-study'>
+        <span class='a1'>R</span><span class='a2'>u</span><span class='a3'>b</span><span class='a4'>i</span><span class='a5'>'</span><span class='a6'>s</span> <span class='a1'>C</span><span class='a2'>h</span><span class='a3'>a</span><span class='a4'>t</span>
+        <p class='room-grade-study'>study ours hobby</p>
+      </div>
+    </div>
+    <div class='study'>
+      <div class='history'>
+              <div class='text-outline'>
+        <p>ルービックキューブの歴史</p>
+
+          <div class='text'><span style="border-bottom: dotted 2px #9eb5d3">1974年エルノー・ルービックが発明</span></div>
+        </div>
+      </div>
+      <div class='celebrity' >
+              <div class='text-outline'>
+        <p>ルービックキューブに関わる人で現在自分が関心のある人</p>
+
+          <div class='text'></div>
+        </div>
+      </div>
+      <div class='info'>
+              <div class='text-outline'>
+        <p>ルービックキューブに関わる情報で今関心がある情報</p>
+
+          <div class='text'></div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class='side'>
-  </div>
-</div>
-
-<div class=study-outline>
-  <div class=history>
-    <p>ルービックキューブの歴史</p>
-  </div>
-  <div class=celebrity>
-    <p>ルービックキューブに関わる人で現在自分が関心のある人</p>
-  </div>
-  <div class=info>
-    <p>ルービックキューブに関わる情報で今関心がある情報</p>
-  </div>
+  <%= render "part/icon_all" %>
 </div>
