--- a/app/assets/stylesheets/studies.css
+++ b/app/assets/stylesheets/studies.css
@@ -1,8 +1,36 @@
-.title-logo {
-     color: #FFF;
-     font-size: 50px;
-     font-family: 'Amatic SC', cursive;
+.title-outline {
+  width: calc( 100vw - 100px );
+  text-align: center;
+  background-color: #FFF;
+}
+.title-logo-study {
+    font-size: 50px;
+    font-family: 'Amatic SC', cursive;
+    border-radius: 20px;
+    background-color: #162430;
     }
+
+.room-grade-study {
+    font-family: 'Montserrat Subrayada', sans-serif;
+    color: #FFF;
+    font-size: 20px;
+    }
+
+.text-outline {
+  width: 800px;
+  text-align: center;
+}
+
+.text {
+  background-color: #FFF;
+  height: 500px;
+  width: 100%;
+  border-radius: 20px;
+  overflow: scroll;
+  color: black;
+  padding: 15px 0;
+  font-size: 20px;
+}
 
 .a1 {
     color: red;
@@ -21,9 +49,38 @@
     }
 
 .a5 {
-     color: white; 
+     color: white;
     }
     
 .a6 {
-     color: yellow; 
+     color: yellow;
     }
+
+.study-outline {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #FFF;
+}
+
+.study {
+  background-color: #9eb5d3;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  overflow: scroll;
+}
+
+.history,
+.celebrity,
+.info {
+  font-family: 'ＭＳ 明朝', serif;
+  color: #FFF;
+  font-size: 25px;
+  margin: 20px 0;
+}
