views/homes/index.html.erbの編集

--- a/app/assets/stylesheets/rooms_all.css
+++ b/app/assets/stylesheets/rooms_all.css
@@ -96,6 +96,12 @@
   padding-top: 10px; 
 }
 
+.chara {
+  font-family: 'Montserrat Subrayada', sans-serif;
+  color: #FFF;
+  font-size: 30px;
+}
+
 .status {
   background-color: #253141;
   height: 100%;
