--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -8,23 +8,28 @@
     </div>
     <div class='study'>
       <div class='history'>
-              <div class='text-outline'>
+        <div class='text-outline'>
+        <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
         <p>ルービックキューブの歴史</p>
+        <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
 
           <div class='text'><span style="border-bottom: dotted 2px #9eb5d3">1974年エルノー・ルービックが発明</span></div>
         </div>
       </div>
       <div class='celebrity' >
               <div class='text-outline'>
+        <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
         <p>ルービックキューブに関わる人で現在自分が関心のある人</p>
+        <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
 
           <div class='text'></div>
         </div>
       </div>
       <div class='info'>
-              <div class='text-outline'>
-        <p>ルービックキューブに関わる情報で今関心がある情報</p>
-
+        <div class='text-outline'>
+          <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
+          <p>ルービックキューブに関わる情報で今関心がある情報</p>
+          <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
           <div class='text'></div>
         </div>
       </div>
