--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,21 +1,60 @@
-<div　class='home-outline'>
-<h1>マイページ</h1>
-  <div class='absent'>
-    <p>ログイン出席簿</p>
+<div class='outline'>
+  <div class='home-outline'>
+    <div class='title-outline'>
+      <div class='title-logo-study'>
+        <span class='a1'>R</span><span class='a2'>u</span><span class='a3'>b</span><span class='a4'>i</span><span class='a5'>'</span><span class='a6'>s</span> <span class='a1'>C</span><span class='a2'>h</span><span class='a3'>a</span><span class='a4'>t</span>
+        <p class='room-grade-home'>My Page</p>
+      </div>
+    </div>
+    <div class='mypage'>
+      <div class='profile'>
+        <div class ='mypage-title'>
+          <p>プロフィール</p>
+          <div><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %></div>
+        </div>
+        <div class='profile-nickname'>
+          <div class='text-title'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>nickname</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+          <div class='text-info'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>sample</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+        </div>
+        <div class='profile-nickname'>
+          <div class='text-title'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>Age</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+          <div class='text-info'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>22</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+        </div>
+        <div class='profile-nickname'>
+          <div class='text-title'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>years of experience</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+          <div class='text-info'>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+              <div class='nickname'>1</div>
+            <div><%= image_tag("qube.png", size: '10x10' ) %></div>
+          </div>
+        </div>
+      </div>
+        <div class ='mypage-title'>
+          <p>出席簿</p>
+          <div><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %></div>
+        </div>
+        <div id="calender"></div>
+    </div>
   </div>
-  <div class='profiel'>
-    <p>プロフィール</p>
-  </div>
-  <div class='to-Aclass'>
-    <p>Aclassへ</p>
-  </div>
-  <div class='to-Bclass'>
-    <p>Bclassへ</p>
-  </div>
-  <div class='to-Cclass'>
-    <p>Cclassへ</p>
-  </div>
-    <div class='to-study'>
-    <p>趣味調べへ</p>
-  </div>
+  <%= render "part/icon_all" %>
 </div>
