--- a/app/views/part/_icon_all.html.erb
+++ b/app/views/part/_icon_all.html.erb
@@ -2,12 +2,16 @@
   <div class='status'>
       <%= link_to image_tag("qube.png", size: '50x50' ), root_path, class: "icon" %>
       <%= link_to image_tag("user.png", size: '50x50' ), class: "icon" %>
-      <%= link_to image_tag("sign_in.png", size: '50x50' ), class: "icon" %>
-      <%= link_to image_tag("home.png", size: '50x50' ), class: "icon" %>
+      <%= link_to image_tag("login.png", size: '50x50' ), class: "icon" %>
+      <%= link_to image_tag("logout.png", size: '50x50' ), class: "icon" %>
+      <%= link_to image_tag("home.png", size: '50x50' ), homes_path, class: "icon" %>
       <%= link_to image_tag("pen.png", size: '50x50' ), class: "icon" %>
       <%= link_to image_tag("study.png", size: '50x50' ), studies_path, class: "icon" %>
       <%= link_to image_tag("recycle.png", size: '50x50' ), class: "icon" %>
       <%= link_to image_tag("plant.png", size: '50x50' ), class: "icon" %>
       <%= link_to image_tag("create.png", size: '100x100' ), class: "icon" %>
+      <a href='#', class='chara'>A</a>
+      <a href='#', class='chara'>B</a>
+      <a href='#', class='chara'>C</a>
   </div>
 </div>
