--- a/app/assets/stylesheets/homes.css
+++ b/app/assets/stylesheets/homes.css
@@ -22,7 +22,7 @@
     align-items: center;
     border-radius: 20px;
     overflow: scroll;
-    color: #fff;
+      color: #fff;
   }
 
 .profile {
@@ -55,6 +55,14 @@
 .mypage-title {
   text-align: center;
   font-family: 'ＭＳ 明朝', serif;
-  padding-top: 80px;
+  padding: 80px 0 40px;
   font-size: 25px;
+}
+
+.calender {
+  color: black;
+  margin-bottom: 50px;
+  border-radius: 30px;
+  font-family: 'ＭＳ 明朝', serif;
+  background-color: #fff;
 }
