--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -22,7 +22,7 @@
         <p>ルービックキューブに関わる人で現在自分が関心のある人</p>
         <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
 
-          <div class='text'></div>
+          <div class='text'><span style="border-bottom: dotted 2px #9eb5d3"></span></div>
         </div>
       </div>
       <div class='info'>
@@ -30,7 +30,7 @@
           <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
           <p>ルービックキューブに関わる情報で今関心がある情報</p>
           <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
-          <div class='text'></div>
+          <div class='text'><span style="border-bottom: dotted 2px #9eb5d3"></span></div>
         </div>
       </div>
     </div>
