ログイン画面への遷移

--- a/app/views/all_rooms/index.html.erb
+++ b/app/views/all_rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div class="outline">
-  <%= render "part/side_all" %>
-  <%= render "part/chat_all" %>
-  <%= render "part/icon_all" %>
+  <%= render "parts/side_all" %>
+  <%= render "parts/chat_all" %>
+  <%= render "parts/icon_all" %>
 </div>
