--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -19,7 +19,7 @@
       <div class='celebrity' >
               <div class='text-outline'>
         <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
-        <p>ルービックキューブに関わる人で現在自分が関心のある人</p>
+        <p>現在自分が関心のあるルービックキューブに関わる人物</p>
         <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
 
           <div class='text'><span style="border-bottom: dotted 2px #9eb5d3"></span></div>
@@ -28,7 +28,7 @@
       <div class='info'>
         <div class='text-outline'>
           <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
-          <p>ルービックキューブに関わる情報で今関心がある情報</p>
+          <p>現在自分が関心のあるルービックキューブに関わる情報</p>
           <%= image_tag("qube.png", size: '10x10' ) %><%= image_tag("qube.png", size: '10x10' ) %>
           <div class='text'><span style="border-bottom: dotted 2px #9eb5d3"></span></div>
         </div>
