--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href = "http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+    <%# <link rel="stylesheet" type="text/css" href = "http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css"> %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
